--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
+    <!-- <script
       type="text/javascript"
       id="hs-script-loader"
       async
       defer
       src="//js.hs-scripts.com/47956760.js"
-    ></script>
+    ></script> -->
   </body>
 </html>
